--- a/templates/spacetrends/index.html
+++ b/templates/spacetrends/index.html
@@ -5,6 +5,7 @@
     <title>Getting Started with Django and Webpack</title>
   </head>
   <body>
+    <div id="root" />
     <script src="{% static 'index-bundle.js' %}"></script>
   </body>
 </html>
